--- a/tourism.css
+++ b/tourism.css
@@ -50,46 +50,7 @@ nav {
     cursor: pointer;
 }
 
-#bookingFormContainer {
-    display: none;
-    max-width: 500px;
-    margin: 2rem auto;
-    padding: 2rem;
-    background-color: transparent;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
 
-form label {
-    display: block;
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
-}
-
-form input,
-form select {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-form button[type="submit"] {
-    margin-top: 1.5rem;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.success-message {
-    margin-top: 1rem;
-    color: green;
-    font-weight: bold;
-    text-align: center;
-}
 
 .nav-links {
     display: flex;
@@ -162,33 +123,6 @@ form button[type="submit"] {
 
 #about {
     height: 60vh;
-}
-
-.quote-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-}
-
-.quote {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(151, 255, 139);
-    height: 95%;
-    padding: 20px;
-    gap: 30px;
-    margin: 160px;
-    border: 1px solid var(--primary-green);
-}
-
-.quote p {
-    font-size: 1.5rem;
-}
-
-.quote-section img {
-    max-width: 100%;
 }
 
 .destinations h2 {
@@ -631,8 +565,13 @@ a:hover::after {
     .welcome-card {
         width: 90%;
         margin-left: 5%;
-        height: auto;
         padding: 1rem;
+    }
+    .freedom-text {
+        max-width: 100%;
+    }
+    .freedom img {
+       display: none;
     }
     .main-items {
         font-size: 1.2rem;
@@ -641,6 +580,8 @@ a:hover::after {
         width: 50%;
         margin-left: 25%;
     }
+    
+   
 }
 
 @media (max-width: 768px) {
