--- a/tourism.css
+++ b/tourism.css
@@ -564,13 +564,7 @@ a:hover::after {
     cursor: pointer;
 }
 
-.hamburger div {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    margin: 4px 0;
-    transition: 0.3s;
-}
+
 
 
 @keyframes fadeIn {
@@ -690,6 +684,9 @@ a:hover::after {
 
     .hamburger {
         display: flex;
+        position: relative;
+        right: 0px;
+        top: 0px;
     }
 } 
 @media (max-width: 600px) {
